--- a/client/views/main.html
+++ b/client/views/main.html
@@ -1,13 +1,11 @@
 
-<div layout="column" layout="center center">
-    <h3>Your PC</h3>
-  <div ng-repeat="(key,val) in os">
-    <div>{{ key +":"+ "  "+ val }}</div>
+<div flex>
+  <div layout="column" layout-align="center center" style="border: thin solid green;">
+    <h3>Downloads</h3>
   </div>
+
 </div>
-<div layout layout-align="center center">
-  <md-button class="raised" style="background-color: #00A000; color: #FFFFFF;">Confirm</md-button>
-</div>
+
 
 
 
