--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,22 +1,28 @@
-<div layout layout-align="center center">
-  <form layout layout-align="center center"  md-whiteframe="3" name="loginForm" ng-submit="login()">
-    <div layout="column" layout-align="center center" class="md-padding" style="border: solid thin #c2ccd1; border-radius:2%;">
-      <legend>Credentials</legend>
-      <md-input-container>
-        <label for="email">Email</label>
-        <input type="email" ng-model="user.email" id="email">
-      </md-input-container>
-      <md-input-container>
-        <label for="password">Password</label>
-        <input type="password" ng-model="user.password" id="password">
-      </md-input-container>
-      <span ng-show="err" style="color: coral">Invalid Username and/or password. Please try again.</span>
-      <div>
-        <md-button type="submit">Log In</md-button>
+<div layout="column" class="md-padding" >
+  <div>
+    <p class="md-subhead">Please log-in to download Field Smart updates or to confirm your update installation.</p>
+  </div>
+  <div layout layout-align="center center">
+    <form layout layout-align="center center" name="loginForm" ng-submit="login()" style="border: solid 1px rgb(223, 223, 223); border-radius: 5px; color: rgb(53, 120, 201);">
+      <div layout="row" layout-align="center center" class="md-padding"
+           style="border: solid thin rgb(211, 217, 221); border-radius:2%;">
+        <!--<legend>Credentials</legend>-->
+        <md-input-container>
+          <label for="email">Email</label>
+          <input type="email" ng-model="user.email" id="email">
+        </md-input-container>
+        <md-input-container>
+          <label for="password">Password</label>
+          <input type="password" ng-model="user.password" id="password">
+        </md-input-container>
+        <span ng-show="err" style="color: coral">Invalid Username and/or password. Please try again.</span>
+        <div>
+          <md-button type="submit">Log In</md-button>
+        </div>
+
       </div>
 
-    </div>
 
-
-  </form>
+    </form>
+  </div>
 </div>
