--- a/client/views/download.html
+++ b/client/views/download.html
@@ -6,8 +6,8 @@
     <table class="md-padding">
      <tbody >
       <tr layout layout-align="start">
-        <th style="margin: 1rem;">Texas</th>
-
+        <th style="mmargin:1rem 1rem 0 0;">Texas</th>
+        <tr>
         <td>
           <a href="https://s3.amazonaws.com/fsv42updates/FSV42+Update+64bit.EXE">FSV42 64Bit Update</a> |
         </td>
@@ -15,8 +15,11 @@
           <a href="https://s3.amazonaws.com/fsv42updates/FSV42Update32bit.EXE">FSV42 Update</a>
         </td>
       </tr>
+
+      </tr>
       <tr layout layout-align="start">
-        <th style="margin: 1rem;">Kentucky</th>
+        <th style="margin:1rem 1rem 0 0;">Kentucky</th>
+        <tr>
         <td>
           <a href="https://s3.amazonaws.com/fsv42updates/FSV42Update32bit.EXE">FSV42 64Bit Update</a> |
         </td>
@@ -24,14 +27,17 @@
           <a href="https://s3.amazonaws.com/fsv42updates/FSV42Update32bit.EXE">FSV42 Update</a>
         </td>
       </tr>
+      </tr>
       <tr layout layout-align="start">
-        <th style="margin: 1rem;">Mississippi</th>
+        <th style="margin:1rem 1rem 0 0;">Mississippi</th>
+        <tr>
         <td>
           <a href="https://s3.amazonaws.com/fsv42updates/FSV42Update32bit.EXE">FSV42 64Bit Update</a> |
         </td>
         <td>
           <a href="https://s3.amazonaws.com/fsv42updates/FSV42Update32bit.EXE">FSV42 Update</a>
         </td>
+      </tr>
       </tr>
 
       </tbody>
