azure push w/ lat/ long

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -14,3 +14,7 @@ h1,h2,h3,h4,h5,h6,p,span {
 body {
   background-color: white;
 }
+.md-button {border-bottom: thin solid transparent;}
+.md-button:hover {
+  border-bottom: thin solid #d9d9d9;
+}
