azure temp push

--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,7 +1,5 @@
-<div layout="column" class="md-padding" >
-  <div>
-    <p class="md-subhead">Please log-in to download Field Smart updates or to confirm your update installation.</p>
-  </div>
+<div flex layout="column" class="md-padding" >
+
   <div layout layout-align="center center">
     <form layout="row" layout-align="center center" name="loginForm" class="md-whiteframe-1" ng-submit="login()" style="border-radius: 1.2px; color: rgb(53, 120, 201);">
       <div layout="column" layout-align="center center" class="md-padding"
@@ -24,5 +22,8 @@
 
 
     </form>
+  </div>
+  <div layout layout-align="center">
+    <p class="md-caption" style="color:#950B02" >Please log-in to download updates and confirm your installation or report an issue.</p>
   </div>
 </div>
