--- a/client/views/login.html
+++ b/client/views/login.html
@@ -24,6 +24,6 @@
     </form>
   </div>
   <div layout layout-align="center">
-    <p layout layout-align="center center" class="md-caption" style="color:#950B02" >Please log-in to download updates and confirm your installation or report an issue.</p>
+    <p layout layout-align="center center" class="md-caption" style="color:#C2C2C2" >Log-in to download updates and confirm your installation or to report an issue.</p>
   </div>
 </div>
