--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,5 +1,5 @@
 <div flex layout="column" layout-align="center center" class="md-padding">
-  <p class="md-title">Update App</p>
+
   <div layout layout-align="center center">
     <form layout="row" layout-align="center center" name="loginForm" class="md-whiteframe-1" ng-submit="login()" style="border-radius: 1.2px; color: rgb(53, 120, 201);">
       <div layout="column" layout-align="center center" class="md-padding"
@@ -27,3 +27,6 @@
     <p layout layout-align="center center" class="md-caption" style="color:#C2C2C2" >Log-in to download updates and confirm your installation or to report an issue.</p>
   </div>
 </div>
+<footer flex layout="row" layout-align="center end">
+  <span class="md-subhead">Heath Consultants 2016</span>
+</footer>
