--- a/client/views/login.html
+++ b/client/views/login.html
@@ -27,6 +27,6 @@
     <p layout layout-align="center center" class="md-caption" style="color:#C2C2C2" >Log-in to download updates and confirm your installation or to report an issue.</p>
   </div>
 </div>
-<footer flex layout="row" layout-align="center end">
+<footer flex layout="row" layout-align="center center">
   <span class="md-subhead">Heath Consultants 2016</span>
 </footer>
