--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,7 +1,8 @@
+
 <div flex layout="column" layout-align="center center" class="md-padding">
 
   <div layout layout-align="center center">
-    <form layout="row" layout-align="center center" name="loginForm" class="md-whiteframe-1" ng-submit="login()" style="border-radius: 1.2px; color: rgb(53, 120, 201);">
+    <form layout="row" layout-align="center center" name="loginForm" class="md-whiteframe-1" ng-submit="login()" style="border-radius: 1.2px; color: rgb(53, 120, 201);background-color: whitesmoke">
       <div layout="column" layout-align="center center" class="md-padding"
            style="border: solid thin rgb(230, 230, 230); border-radius:2%; width:600px;">
         <!--<legend>Credentials</legend>-->
@@ -24,7 +25,7 @@
     </form>
   </div>
   <div layout layout-align="center">
-    <p layout layout-align="center center" class="md-caption" style="color:#C2C2C2" >Log-in to download updates and confirm your installation or to report an issue.</p>
+    <p layout layout-align="center center" class="md-caption" style="color:#C2C2C2" >Please use your office 365 credentials to log in</p>
   </div>
 </div>
 <footer flex layout="row" layout-align="center center">
