--- a/client/css/main.css
+++ b/client/css/main.css
@@ -3,7 +3,15 @@
   templates compile.  The !important is important given that there may be
   other selectors that are more specific or come later and might alter display.
  */
-
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+#logo {
+  background-image: url(../hc-logo.png);
+}
+md-header {
+  max-height: 120px!important;
+}
 html { overflow:hidden; }
 
 .md-button[disabled] {
@@ -12,9 +20,7 @@ html { overflow:hidden; }
 .md-primary {
   background-color:#34495E!important;
 }
-[ng\:cloak], [ng-cloak], .ng-cloak {
-  display: none !important;
-}
+
 h1 {
   font-family: 'Lora', sans-serif;
 }
