--- a/client/css/main.css
+++ b/client/css/main.css
@@ -78,4 +78,7 @@ td{
 tbody tr:nth-child(odd) {
   background-color: lightgray;
 }
-
+#map {
+  width:275px; height: 175px;
+}
+.angular-google-map-container {  }
