--- a/client/css/main.css
+++ b/client/css/main.css
@@ -14,6 +14,9 @@ md-header {
 }
 html { overflow:hidden; }
 
+a:active{
+  color: darkgoldenrod;
+}
 .md-button[disabled] {
   background-color: #d2d2d2!important;
 }
