--- a/client/views/login.html
+++ b/client/views/login.html
@@ -1,33 +1,35 @@
+<div flex layout="column" layout-align="space-between center">
 
-<div flex layout="column" layout-align="center center" class="md-padding">
+  <div flex layout="column" layout-align="center center" class="md-padding" style="margin-top:4rem; ">
 
-  <div layout layout-align="center center">
-    <form layout="row" layout-align="center center" name="loginForm" class="md-whiteframe-1" ng-submit="login()" id="sign-in-form">
-      <div layout="column" layout-align="center center" class="md-padding"
-           style="border: solid thin rgb(230, 230, 230); border-radius:2%; width:600px;">
-        <!--<legend>Credentials</legend>-->
-        <md-input-container>
-          <label for="email">Email</label>
-          <input type="email" ng-model="user.email" id="email" style="width: 240px;" >
-        </md-input-container>
-        <md-input-container>
-          <label for="password">Password</label>
-          <input type="password" ng-model="user.password" id="password" style="width: 240px;">
-        </md-input-container>
-        <div ng-show="err" style="color: coral">Invalid Username and/or password. Please try again.</div>
-        <div>
-          <md-button class="" type="submit" id="sign-in-button">Log In</md-button>
+    <div layout layout-align="center center" >
+      <form layout="row" layout-align="center center" name="loginForm" class="" ng-submit="login()" id="sign-in-form" md-whiteframe="1">
+        <div layout="column" layout-align="center center" class="md-padding"
+             style="border: solid thin rgb(230, 230, 230); border-radius:2%; width:600px;">
+          <!--<legend>Credentials</legend>-->
+          <md-input-container>
+            <label for="email">Email</label>
+            <input type="email" ng-model="user.email" id="email" style="width: 240px;" >
+          </md-input-container>
+          <md-input-container>
+            <label for="password">Password</label>
+            <input type="password" ng-model="user.password" id="password" style="width: 240px;">
+          </md-input-container>
+          <div ng-show="err" style="color: coral">Invalid Username and/or password. Please try again.</div>
+          <div>
+            <md-button class="" type="submit" id="sign-in-button">Log In</md-button>
+          </div>
+          <i class="material-icons" style="color:#e2e2e2">lock</i><span class="md-caption">Secure Log-In</span>
         </div>
 
-      </div>
 
-
-    </form>
+      </form>
+    </div>
+    <div layout layout-align="center">
+      <!--Enter message here-->
+    </div>
   </div>
-  <div layout layout-align="center">
-    <p layout layout-align="center center" class="md-caption" style="color:#C2C2C2" >Please use your office 365 credentials to log in</p>
-  </div>
+<!--  <div flex layout="row" layout-align="center center">
+    <span flex layout layout-align="center center" class="md-caption fixed-footer">Heath Consultants &copy;2016</span>
+  </div>-->
 </div>
-<footer flex layout="row" layout-align="center center">
-  <span class="md-subhead">Heath Consultants 2016</span>
-</footer>
